--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.4.1
 Django==3.2.9
 django-cors-headers==3.10.0
 django-extensions==3.1.5
+django-rest-framework==0.1.0
+djangorestframework==3.12.4
 Pillow==8.4.0
 pytz==2021.3
 sqlparse==0.4.2
