--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@toast-ui/editor": "^3.1.1",
+    "@toast-ui/vue-editor": "^3.1.1",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
