--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "i": "^0.3.7",
+    "npm": "^8.1.4",
     "postcss": "^7",
+    "swiper": "^5.3.7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
