--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@toast-ui/editor": "^3.1.1",
     "@toast-ui/vue-editor": "^3.1.1",
     "autoprefixer": "^9",
@@ -17,6 +18,7 @@
     "npm": "^8.1.4",
     "postcss": "^7",
     "swiper": "^5.3.7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
@@ -41,6 +43,7 @@
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5",
+    "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
