--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
         {
           "endOfLine": "auto"
         }
-      ]
+      ],
+      "@typescript-eslint/explicit-function-return-type": "off"
     }
   },
   "browserslist": [
